# cpp-mcp-sdk

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.bestfactory/: config.jsonc
.docs/plans/cpp-mcp-sdk-dry-stub-cleanup/: dependencies.md  master_plan.md  task-001.md  task-002.md  task-003.md  task-004.md  task-005.md  task-006.md  task-007.md  task-008.md  task-009.md  (+8 more)
.docs/requirements/: cpp-mcp-sdk-gap-matrix.md  cpp-mcp-sdk.md  cpp-sdk-codebase-cleanup.md  cpp-source-namespace-and-include-normalization.md  namespace-and-header-normalization.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Options.cmake  mcp_sdk-config.cmake.in
docs/: README.md  api_overview.md  dependencies.md  quickstart_client.md  quickstart_server.md  schema_pinning.md  security.md  vcpkg_upstream_checklist.md  version_policy.md
examples/: CMakeLists.txt  README.md  minimal_example.cpp
examples/bidirectional_sampling_elicitation/: CMakeLists.txt  README.md  main.cpp
examples/consumer_find_package/: CMakeLists.txt  README.md  main.cpp
examples/consumer_vcpkg_overlay/: CMakeLists.txt  README.md  main.cpp
examples/dual_transport_server/: CMakeLists.txt  README.md  main.cpp
examples/http_client_auth/: CMakeLists.txt  README.md  main.cpp
examples/http_listen_example/: CMakeLists.txt  README.md  main.cpp
examples/http_server_auth/: CMakeLists.txt  README.md  main.cpp
examples/http_server_auth/tls/: README.md  generate_local_certs.sh  openssl-localhost.cnf
examples/stdio_server/: CMakeLists.txt  README.md  main.cpp
include/mcp/: all.hpp  client.hpp  error_reporter.hpp  errors.hpp  export.hpp  server.hpp  session.hpp  version.hpp
src/: auth_client_registration.cpp  auth_loopback_receiver.cpp  auth_oauth_client.cpp  auth_oauth_client_disabled.cpp  auth_protected_resource_metadata.cpp  version.cpp
src/auth/: client_registration.cpp  loopback_receiver.cpp  oauth_client.cpp  oauth_client_disabled.cpp  protected_resource_metadata.cpp
src/client/: client.cpp
src/detail/: inbound_loop.cpp  initialize_codec.cpp  thread_boundary.hpp
src/jsonrpc/: messages.cpp  response_factories.cpp  router.cpp
src/lifecycle/: session.cpp
src/schema/: pinned_schema_data.cpp.in  validator.cpp
src/sdk/: version.cpp
src/security/: crypto_random.cpp
src/server/: combined_runner.cpp  server.cpp  stdio_runner.cpp  streamable_http_runner.cpp
src/transport/: http_client.cpp  http_runtime.cpp  http_server.cpp  stdio.cpp  streamable_http_client_transport.cpp
src/util/: tasks.cpp
tests/: CMakeLists.txt  auth_client_registration_test.cpp  auth_oauth_client_disabled_test.cpp  auth_oauth_client_test.cpp  auth_protected_resource_metadata_test.cpp  client_http_listen_test.cpp  client_test.cpp  detail_ascii_test.cpp  detail_base64url_test.cpp  detail_initialize_codec_test.cpp  detail_url_test.cpp  jsonrpc_messages_test.cpp  jsonrpc_router_test.cpp  lifecycle_test.cpp  runtime_limits_test.cpp  schema_pinned_schema_test.cpp  schema_validator_test.cpp  sdk_version_test.cpp  security_crypto_random_test.cpp  security_limits_test.cpp  server_combined_runner_test.cpp  server_stdio_runner_test.cpp  server_streamable_http_runner_test.cpp  server_test.cpp  smoke_test.cpp  tasks_test.cpp  transport_http_client_test.cpp  transport_http_common_integration_test.cpp  transport_http_common_test.cpp  transport_http_runtime_test.cpp  transport_http_server_test.cpp  transport_http_tls_test.cpp  transport_stdio_subprocess_server.cpp  transport_stdio_subprocess_test.cpp  transport_stdio_test.cpp  transport_threading_test.cpp  util_cancellation_test.cpp  util_progress_test.cpp
tests/concurrency/: concurrent_routing_test.cpp  destructor_safety_test.cpp  exception_containment_test.cpp  idempotent_lifecycle_test.cpp
tests/conformance/: test_authorization.cpp  test_capabilities.cpp  test_jsonrpc_invariants.cpp  test_legacy_client.cpp  test_legacy_server.cpp  test_lifecycle.cpp  test_pinned_mirror.cpp  test_stdio_transport.cpp  test_streamable_http_transport.cpp  test_tasks.cpp
tests/detail/: thread_boundary_test.cpp
tests/fixtures/: generate_test_certs.ps1  generate_test_certs.sh  tls-ca-cert.pem  tls-localhost-cert.pem  tls-localhost-key.pem
tests/integration/: CMakeLists.txt  COVERAGE.md  README.md  cpp_client_fixture.cpp  cpp_client_resources_advanced_fixture.cpp  cpp_client_roots_fixture.cpp  cpp_client_tasks_fixture.cpp  cpp_client_utilities_fixture.cpp  cpp_server_fixture.cpp  cpp_server_resources_advanced_fixture.cpp  cpp_server_roots_fixture.cpp  cpp_server_tasks_fixture.cpp  cpp_server_utilities_fixture.cpp  cpp_stdio_server_fixture.cpp  cpp_stdio_server_resources_advanced_fixture.cpp  cpp_stdio_server_roots_fixture.cpp  cpp_stdio_server_tasks_fixture.cpp  cpp_stdio_server_utilities_fixture.cpp
tests/integration/fixtures/: reference_python_server.py
tests/integration/python/: __init__.py  assertions.py  harness.py  stdio_raw.py  streamable_http_raw.py
tests/integration/scripts/: cpp_client_to_reference_server.py  cpp_client_to_reference_server_resources_advanced.py  cpp_client_to_reference_server_roots.py  cpp_client_to_reference_server_tasks.py  cpp_client_to_reference_server_utilities.py  reference_client_to_cpp_server.py  reference_client_to_cpp_server_resources_advanced.py  reference_client_to_cpp_server_roots.py  reference_client_to_cpp_server_tasks.py  reference_client_to_cpp_server_utilities.py  reference_client_to_cpp_stdio_server.py  reference_client_to_cpp_stdio_server_resources_advanced.py  reference_client_to_cpp_stdio_server_roots.py  reference_client_to_cpp_stdio_server_tasks.py  reference_client_to_cpp_stdio_server_utilities.py  reference_coverage_gate.py  setup_reference_python_sdk.py
tests/jsonrpc/: router_concurrency_test.cpp
tools/checks/: check_git_index_hygiene.py  check_include_policy.py  check_public_header_namespace_layout.py  check_public_header_one_type.py  run_checks.py  test_check_public_header_one_type.py  test_namespace_layout_regression.py
(+630 files in other folders)
